deploy/gateway/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway
  annotations:
    kubernetes.io/ingress.class: external-ingress
    cert-manager.io/cluster-issuer: letsencrypt-srzlab-tech
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  tls:
    - hosts:
        - gateway.srzlab.tech
      secretName: gateway-tls
  rules:
    - host: gateway.srzlab.tech
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  number: 8000
